express/styles/styles.css
/* ... */
main .long-form.grid-width-6-desktop.narrow .default-content-wrapper {
  max-width: 850px;
  margin: 0 auto;
}

@media (max-width: 600px) {
  .long-form.narrow.section.section-wrapper {
    max-width: 375px;
    margin: 0 auto;
  }
}


@media (min-width: 900px) {
  main .block .button-container.free-plan-container {
    width: max-content;
  }

  main .block.fullscreen-marquee .button-container.free-plan-container {
    justify-content: center;
    width: auto;
    align-items: center;
  }

  main .block .button-container.free-plan-container a.button {
    margin: 0;
    display: flex;
    align-items: center;
    /* todo: investigate why */
    z-index: 4;
  }

  main .block .free-plan-widget .plan-widget-tag {
    text-align: left;
  }

  main > div:not(.banner-container) .block:not(.pricing-summary, .pricing-cards, .pricing-table, .link-list, .wayfinder, .ratings) a.button.same-fcta {
    display: inline-block;
  }
}

@media (min-width: 1200px) {
  main .block .button-container.free-plan-container {
    flex-direction: row;
    width: auto;
    justify-content: left;
  }

  main .block.center .button-container.free-plan-container {
    justify-content: unset;
    margin: 40px auto 0 auto;
  }

  main .block .free-plan-widget {
    margin: 0 auto;
  }

  main .block .button-container.free-plan-container a.button {
    margin-right: 24px;
  }

  main .block .button-container.free-plan-container .free-plan-widget {
    margin: 0;
  }

  main .block .button-container.free-plan-container.stacked {
    margin-top: 0;
    flex-wrap: wrap;
  }

  main .block .button-container.free-plan-container.stacked .free-plan-widget {
    margin-top: 24px;
    flex-direction: row;
  }

  main .block .button-container.free-plan-container.stacked .free-plan-widget > div {
    margin-right: 16px;
  }

  main .template-list-fourcols-container>div,
  main .template-list-horizontal-container>div {
    max-width: 1200px;
  }

  main .columns-fullsize-container>div,
  main .columns-fullsize-center-container>div,
  main .template-list-sixcols-container>div {
    max-width: 1122px;
  }

  main .block .free-plan-bullet .free-plan-bullet-container,
  main .block .free-plan-widget-placeholder {
    max-width: 400px;
  }
}

main .template-list-sixcols-container>div {
  padding: 0;
}

@-webkit-keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

@-moz-keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

@keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

/* disable budoux on small screens  */
@media (max-width: 600px) {
  h1.budoux,
  h2.budoux,
  h3.budoux,
  h4.budoux,
  h5.budoux {
    word-break: normal !important;
  }
}

/* Store icons */
img.icon-apple-store,
img.icon-google-store,
img.icon-galaxy-store,
img.icon-microsoft-store {
  height: 70px;
  width: auto;
  margin: 8px;
}

/* Lottie player default */
.lottie {
  width: 32px;
  height: 32px;
}

/* hide promotion block until loaded */
main .promotion {
  display: none;
}

/* hide floating button before css loads */
main .floating-button-wrapper,
main .floating-button {
  position: fixed;
  display: none;
}

/* hide the .section that ONLY has the floating-button block */
/* (removes the extra whitespace from padding) */
[class=".section floating-button-container"] {
  display: none;
}

/* Japanese heading balanced word wrap styles */
wbr.wbr-off {
  display: none;
}

/* progressive section appearance */
main .section[data-section-status='loading'],
main .section[data-section-status='initialized'],
main > div,
main .section[data-status='decorated'] {
  display: none;
}

main > .section,
.fragment > .section,
main > #hero {
  display: block;
  position: relative;
}

/* Japanese font sizing styles */
:lang(ja) main h1.heading-long, :lang(ja) main #hero h1.heading-long {
  font-size: var(--heading-font-size-xl);
}

:lang(ja) main h1.heading-very-long, :lang(ja) main #hero h1.heading-very-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h1.heading-x-long, :lang(ja) main #hero h1.heading-x-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h2.heading-long, :lang(ja) main #hero h2.heading-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h2.heading-very-long, :lang(ja) main #hero h2.heading-very-long {
  font-size: var(--heading-font-size-l);
}

:lang(ja) main h2.heading-x-long, :lang(ja) main #hero h2.heading-x-long {
  font-size: var(--heading-font-size-m);
}

@media (max-width: 600px) {
  :lang(ja) main h2.heading-long, :lang(ja) main #hero h2.heading-long {
    font-size: var(--heading-font-size-l);
  }

  :lang(ja) main h2.heading-very-long, :lang(ja) main #hero h2.heading-very-long {
    font-size: var(--heading-font-size-m);
  }

  :lang(ja) main h2.heading-x-long, :lang(ja) main #hero h2.heading-x-long {
    font-size: var(--heading-font-size-m);
  }
}

/* long-form section: left-align text */
main .section.long-form .default-content-wrapper {
  box-sizing: border-box;
  padding: 0 20px 60px;
  max-width: unset;
}

main .section.long-form .default-content-wrapper,
main .section.long-form .default-content-wrapper h2,
main .section.long-form .default-content-wrapper h3,
main .section.long-form .default-content-wrapper h4,
main .section.long-form .default-content-wrapper h5,
main .section.long-form .default-content-wrapper h6 {
  text-align: left;
}

main .section.long-form .default-content-wrapper h2,
main .section.long-form .default-content-wrapper h3,
main .section.long-form .default-content-wrapper h4,
main .section.long-form .default-content-wrapper h5,
main .section.long-form .default-content-wrapper h6 {
  font-size: var(--heading-font-size-s);
}

@media (min-width: 600px) {
  main .section.long-form .default-content-wrapper {
    padding: 0 40px 60px;
    max-width: 850px;
  }
}
/* ... */

